compilador_final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON
Rule 2     vars_opt -> KEYWORD_VAR var_lines
Rule 3     vars_opt -> empty
Rule 4     var_lines -> var_lines var_list SEMICOLON
Rule 5     var_lines -> var_list SEMICOLON
Rule 6     var_list -> ID id_list COLON type
Rule 7     id_list -> COMMA ID id_list
Rule 8     id_list -> empty
Rule 9     type -> KEYWORD_INT
Rule 10    type -> KEYWORD_FLOAT
Rule 11    type -> KEYWORD_STRING
Rule 12    funcs_opt -> funcs_opt FUNCS
Rule 13    funcs_opt -> FUNCS
Rule 14    funcs_opt -> empty
Rule 15    FUNCS -> KEYWORD_VOID ID func_start LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON
Rule 16    func_start -> <empty>
Rule 17    func_end -> <empty>
Rule 18    parametros_opt -> parametros
Rule 19    parametros_opt -> empty
Rule 20    parametros -> ID COLON type COMMA parametros
Rule 21    parametros -> ID COLON type
Rule 22    param_list -> ID COLON type COMMA param_list
Rule 23    param_list -> empty
Rule 24    body -> statement_list
Rule 25    statement_list -> statement statement_list
Rule 26    statement_list -> statement
Rule 27    statement_list -> empty
Rule 28    statement -> assign
Rule 29    statement -> condition
Rule 30    statement -> cycle
Rule 31    statement -> f_call
Rule 32    statement -> print
Rule 33    assign -> ID ASSIGN_SIGN expresion SEMICOLON
Rule 34    print -> KEYWORD_PRINT LPAREN print_items RPAREN SEMICOLON
Rule 35    print_items -> print_items COMMA print_item
Rule 36    print_items -> print_item
Rule 37    print_item -> expresion
Rule 38    print_item -> CTE_STRING
Rule 39    cycle -> KEYWORD_DO LBRACE body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON
Rule 40    condition -> KEYWORD_IF LPAREN expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON
Rule 41    cuadr_if -> <empty>
Rule 42    else_arg -> KEYWORD_ELSE cuadr_else LBRACE body RBRACE
Rule 43    cuadr_else -> <empty>
Rule 44    else_arg -> empty
Rule 45    f_call -> ID LPAREN expresion_list_opt RPAREN SEMICOLON
Rule 46    expresion_list_opt -> expresion_list
Rule 47    expresion_list_opt -> empty
Rule 48    expresion_list -> expresion_list COMMA expresion
Rule 49    expresion_list -> expresion
Rule 50    expresion -> exp comparador exp
Rule 51    expresion -> exp
Rule 52    comparador -> LESS
Rule 53    comparador -> GREATER
Rule 54    comparador -> NOT_EQUAL
Rule 55    comparador -> EQUAL
Rule 56    comparador -> GREATER_EQUAL
Rule 57    comparador -> LESS_EQUAL
Rule 58    exp -> exp OP_SUM termino
Rule 59    exp -> exp OP_SUB termino
Rule 60    exp -> termino
Rule 61    termino -> termino OP_MUL factor
Rule 62    termino -> termino OP_DIV factor
Rule 63    termino -> factor
Rule 64    factor -> LPAREN expresion RPAREN
Rule 65    factor -> OP_SUM varcte
Rule 66    factor -> OP_SUB varcte
Rule 67    factor -> varcte
Rule 68    varcte -> ID
Rule 69    varcte -> CTE_INT
Rule 70    varcte -> CTE_FLOAT
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ASSIGN_SIGN          : 33
COLON                : 6 20 21 22
COMMA                : 7 20 22 35 48
CTE_FLOAT            : 70
CTE_INT              : 69
CTE_STRING           : 38
EQUAL                : 55
GREATER              : 53
GREATER_EQUAL        : 56
ID                   : 1 6 7 15 20 21 22 33 45 68
KEYWORD_DO           : 39
KEYWORD_ELSE         : 42
KEYWORD_END          : 1
KEYWORD_FLOAT        : 10
KEYWORD_IF           : 40
KEYWORD_INT          : 9
KEYWORD_MAIN         : 1
KEYWORD_PRINT        : 34
KEYWORD_PROGRAM      : 1
KEYWORD_STRING       : 11
KEYWORD_VAR          : 2
KEYWORD_VOID         : 15
KEYWORD_WHILE        : 39
LBRACE               : 1 39 40 42
LBRACKET             : 15
LESS                 : 52
LESS_EQUAL           : 57
LPAREN               : 15 34 39 40 45 64
NOT_EQUAL            : 54
OP_DIV               : 62
OP_MUL               : 61
OP_SUB               : 59 66
OP_SUM               : 58 65
RBRACE               : 1 39 40 42
RBRACKET             : 15
RPAREN               : 15 34 39 40 45 64
SEMICOLON            : 1 1 4 5 15 33 34 39 40 45
error                : 

Nonterminals, with rules where they appear

FUNCS                : 12 13
Programa             : 0
assign               : 28
body                 : 1 15 39 40 42
comparador           : 50
condition            : 29
cuadr_else           : 42
cuadr_if             : 40
cycle                : 30
else_arg             : 40
empty                : 3 8 14 19 23 27 44 47
exp                  : 50 50 51 58 59
expresion            : 33 37 39 40 48 49 64
expresion_list       : 46 48
expresion_list_opt   : 45
f_call               : 31
factor               : 61 62 63
func_end             : 15
func_start           : 15
funcs_opt            : 1 12
id_list              : 6 7
param_list           : 22
parametros           : 18 20
parametros_opt       : 15
print                : 32
print_item           : 35 36
print_items          : 34 35
statement            : 25 26
statement_list       : 24 25
termino              : 58 59 60 61 62
type                 : 6 20 21 22
var_lines            : 2 4
var_list             : 4 5
varcte               : 65 66 67
vars_opt             : 1 15

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON

    KEYWORD_PROGRAM shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> KEYWORD_PROGRAM . ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON

    ID              shift and go to state 3


state 3

    (1) Programa -> KEYWORD_PROGRAM ID . SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON

    SEMICOLON       shift and go to state 4


state 4

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON . vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON
    (2) vars_opt -> . KEYWORD_VAR var_lines
    (3) vars_opt -> . empty
    (71) empty -> .

    KEYWORD_VAR     shift and go to state 6
    KEYWORD_VOID    reduce using rule 71 (empty -> .)
    KEYWORD_MAIN    reduce using rule 71 (empty -> .)

    vars_opt                       shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt . funcs_opt KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON
    (12) funcs_opt -> . funcs_opt FUNCS
    (13) funcs_opt -> . FUNCS
    (14) funcs_opt -> . empty
    (15) FUNCS -> . KEYWORD_VOID ID func_start LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON
    (71) empty -> .

  ! shift/reduce conflict for KEYWORD_VOID resolved as shift
    KEYWORD_VOID    shift and go to state 11
    KEYWORD_MAIN    reduce using rule 71 (empty -> .)

  ! KEYWORD_VOID    [ reduce using rule 71 (empty -> .) ]

    funcs_opt                      shift and go to state 8
    FUNCS                          shift and go to state 9
    empty                          shift and go to state 10

state 6

    (2) vars_opt -> KEYWORD_VAR . var_lines
    (4) var_lines -> . var_lines var_list SEMICOLON
    (5) var_lines -> . var_list SEMICOLON
    (6) var_list -> . ID id_list COLON type

    ID              shift and go to state 14

    var_lines                      shift and go to state 12
    var_list                       shift and go to state 13

state 7

    (3) vars_opt -> empty .

    KEYWORD_VOID    reduce using rule 3 (vars_opt -> empty .)
    KEYWORD_MAIN    reduce using rule 3 (vars_opt -> empty .)
    ID              reduce using rule 3 (vars_opt -> empty .)
    KEYWORD_IF      reduce using rule 3 (vars_opt -> empty .)
    KEYWORD_DO      reduce using rule 3 (vars_opt -> empty .)
    KEYWORD_PRINT   reduce using rule 3 (vars_opt -> empty .)
    RBRACKET        reduce using rule 3 (vars_opt -> empty .)


state 8

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt . KEYWORD_MAIN LBRACE body RBRACE KEYWORD_END SEMICOLON
    (12) funcs_opt -> funcs_opt . FUNCS
    (15) FUNCS -> . KEYWORD_VOID ID func_start LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON

    KEYWORD_MAIN    shift and go to state 15
    KEYWORD_VOID    shift and go to state 11

    FUNCS                          shift and go to state 16

state 9

    (13) funcs_opt -> FUNCS .

    KEYWORD_MAIN    reduce using rule 13 (funcs_opt -> FUNCS .)
    KEYWORD_VOID    reduce using rule 13 (funcs_opt -> FUNCS .)


state 10

    (14) funcs_opt -> empty .

    KEYWORD_MAIN    reduce using rule 14 (funcs_opt -> empty .)
    KEYWORD_VOID    reduce using rule 14 (funcs_opt -> empty .)


state 11

    (15) FUNCS -> KEYWORD_VOID . ID func_start LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON

    ID              shift and go to state 17


state 12

    (2) vars_opt -> KEYWORD_VAR var_lines .
    (4) var_lines -> var_lines . var_list SEMICOLON
    (6) var_list -> . ID id_list COLON type

  ! shift/reduce conflict for ID resolved as shift
    KEYWORD_VOID    reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    KEYWORD_MAIN    reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    KEYWORD_IF      reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    KEYWORD_DO      reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    KEYWORD_PRINT   reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    RBRACKET        reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .)
    ID              shift and go to state 14

  ! ID              [ reduce using rule 2 (vars_opt -> KEYWORD_VAR var_lines .) ]

    var_list                       shift and go to state 18

state 13

    (5) var_lines -> var_list . SEMICOLON

    SEMICOLON       shift and go to state 19


state 14

    (6) var_list -> ID . id_list COLON type
    (7) id_list -> . COMMA ID id_list
    (8) id_list -> . empty
    (71) empty -> .

    COMMA           shift and go to state 21
    COLON           reduce using rule 71 (empty -> .)

    id_list                        shift and go to state 20
    empty                          shift and go to state 22

state 15

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN . LBRACE body RBRACE KEYWORD_END SEMICOLON

    LBRACE          shift and go to state 23


state 16

    (12) funcs_opt -> funcs_opt FUNCS .

    KEYWORD_MAIN    reduce using rule 12 (funcs_opt -> funcs_opt FUNCS .)
    KEYWORD_VOID    reduce using rule 12 (funcs_opt -> funcs_opt FUNCS .)


state 17

    (15) FUNCS -> KEYWORD_VOID ID . func_start LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON
    (16) func_start -> .

    LPAREN          reduce using rule 16 (func_start -> .)

    func_start                     shift and go to state 24

state 18

    (4) var_lines -> var_lines var_list . SEMICOLON

    SEMICOLON       shift and go to state 25


state 19

    (5) var_lines -> var_list SEMICOLON .

    ID              reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    KEYWORD_VOID    reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    KEYWORD_MAIN    reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    KEYWORD_IF      reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    KEYWORD_DO      reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    KEYWORD_PRINT   reduce using rule 5 (var_lines -> var_list SEMICOLON .)
    RBRACKET        reduce using rule 5 (var_lines -> var_list SEMICOLON .)


state 20

    (6) var_list -> ID id_list . COLON type

    COLON           shift and go to state 26


state 21

    (7) id_list -> COMMA . ID id_list

    ID              shift and go to state 27


state 22

    (8) id_list -> empty .

    COLON           reduce using rule 8 (id_list -> empty .)


state 23

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE . body RBRACE KEYWORD_END SEMICOLON
    (24) body -> . statement_list
    (25) statement_list -> . statement statement_list
    (26) statement_list -> . statement
    (27) statement_list -> . empty
    (28) statement -> . assign
    (29) statement -> . condition
    (30) statement -> . cycle
    (31) statement -> . f_call
    (32) statement -> . print
    (71) empty -> .
    (33) assign -> . ID ASSIGN_SIGN expresion SEMICOLON
    (40) condition -> . KEYWORD_IF LPAREN expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON
    (39) cycle -> . KEYWORD_DO LBRACE body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON
    (45) f_call -> . ID LPAREN expresion_list_opt RPAREN SEMICOLON
    (34) print -> . KEYWORD_PRINT LPAREN print_items RPAREN SEMICOLON

    RBRACE          reduce using rule 71 (empty -> .)
    ID              shift and go to state 28
    KEYWORD_IF      shift and go to state 38
    KEYWORD_DO      shift and go to state 39
    KEYWORD_PRINT   shift and go to state 40

    body                           shift and go to state 29
    statement_list                 shift and go to state 30
    statement                      shift and go to state 31
    empty                          shift and go to state 32
    assign                         shift and go to state 33
    condition                      shift and go to state 34
    cycle                          shift and go to state 35
    f_call                         shift and go to state 36
    print                          shift and go to state 37

state 24

    (15) FUNCS -> KEYWORD_VOID ID func_start . LPAREN parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON

    LPAREN          shift and go to state 41


state 25

    (4) var_lines -> var_lines var_list SEMICOLON .

    ID              reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    KEYWORD_VOID    reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    KEYWORD_MAIN    reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    KEYWORD_IF      reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    KEYWORD_DO      reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    KEYWORD_PRINT   reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)
    RBRACKET        reduce using rule 4 (var_lines -> var_lines var_list SEMICOLON .)


state 26

    (6) var_list -> ID id_list COLON . type
    (9) type -> . KEYWORD_INT
    (10) type -> . KEYWORD_FLOAT
    (11) type -> . KEYWORD_STRING

    KEYWORD_INT     shift and go to state 43
    KEYWORD_FLOAT   shift and go to state 44
    KEYWORD_STRING  shift and go to state 45

    type                           shift and go to state 42

state 27

    (7) id_list -> COMMA ID . id_list
    (7) id_list -> . COMMA ID id_list
    (8) id_list -> . empty
    (71) empty -> .

    COMMA           shift and go to state 21
    COLON           reduce using rule 71 (empty -> .)

    id_list                        shift and go to state 46
    empty                          shift and go to state 22

state 28

    (33) assign -> ID . ASSIGN_SIGN expresion SEMICOLON
    (45) f_call -> ID . LPAREN expresion_list_opt RPAREN SEMICOLON

    ASSIGN_SIGN     shift and go to state 47
    LPAREN          shift and go to state 48


state 29

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body . RBRACE KEYWORD_END SEMICOLON

    RBRACE          shift and go to state 49


state 30

    (24) body -> statement_list .

    RBRACE          reduce using rule 24 (body -> statement_list .)
    RBRACKET        reduce using rule 24 (body -> statement_list .)


state 31

    (25) statement_list -> statement . statement_list
    (26) statement_list -> statement .
    (25) statement_list -> . statement statement_list
    (26) statement_list -> . statement
    (27) statement_list -> . empty
    (28) statement -> . assign
    (29) statement -> . condition
    (30) statement -> . cycle
    (31) statement -> . f_call
    (32) statement -> . print
    (71) empty -> .
    (33) assign -> . ID ASSIGN_SIGN expresion SEMICOLON
    (40) condition -> . KEYWORD_IF LPAREN expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON
    (39) cycle -> . KEYWORD_DO LBRACE body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON
    (45) f_call -> . ID LPAREN expresion_list_opt RPAREN SEMICOLON
    (34) print -> . KEYWORD_PRINT LPAREN print_items RPAREN SEMICOLON

  ! reduce/reduce conflict for RBRACE resolved using rule 26 (statement_list -> statement .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 26 (statement_list -> statement .)
    RBRACE          reduce using rule 26 (statement_list -> statement .)
    RBRACKET        reduce using rule 26 (statement_list -> statement .)
    ID              shift and go to state 28
    KEYWORD_IF      shift and go to state 38
    KEYWORD_DO      shift and go to state 39
    KEYWORD_PRINT   shift and go to state 40

  ! RBRACE          [ reduce using rule 71 (empty -> .) ]
  ! RBRACKET        [ reduce using rule 71 (empty -> .) ]

    statement                      shift and go to state 31
    statement_list                 shift and go to state 50
    empty                          shift and go to state 32
    assign                         shift and go to state 33
    condition                      shift and go to state 34
    cycle                          shift and go to state 35
    f_call                         shift and go to state 36
    print                          shift and go to state 37

state 32

    (27) statement_list -> empty .

    RBRACE          reduce using rule 27 (statement_list -> empty .)
    RBRACKET        reduce using rule 27 (statement_list -> empty .)


state 33

    (28) statement -> assign .

    ID              reduce using rule 28 (statement -> assign .)
    KEYWORD_IF      reduce using rule 28 (statement -> assign .)
    KEYWORD_DO      reduce using rule 28 (statement -> assign .)
    KEYWORD_PRINT   reduce using rule 28 (statement -> assign .)
    RBRACE          reduce using rule 28 (statement -> assign .)
    RBRACKET        reduce using rule 28 (statement -> assign .)


state 34

    (29) statement -> condition .

    ID              reduce using rule 29 (statement -> condition .)
    KEYWORD_IF      reduce using rule 29 (statement -> condition .)
    KEYWORD_DO      reduce using rule 29 (statement -> condition .)
    KEYWORD_PRINT   reduce using rule 29 (statement -> condition .)
    RBRACE          reduce using rule 29 (statement -> condition .)
    RBRACKET        reduce using rule 29 (statement -> condition .)


state 35

    (30) statement -> cycle .

    ID              reduce using rule 30 (statement -> cycle .)
    KEYWORD_IF      reduce using rule 30 (statement -> cycle .)
    KEYWORD_DO      reduce using rule 30 (statement -> cycle .)
    KEYWORD_PRINT   reduce using rule 30 (statement -> cycle .)
    RBRACE          reduce using rule 30 (statement -> cycle .)
    RBRACKET        reduce using rule 30 (statement -> cycle .)


state 36

    (31) statement -> f_call .

    ID              reduce using rule 31 (statement -> f_call .)
    KEYWORD_IF      reduce using rule 31 (statement -> f_call .)
    KEYWORD_DO      reduce using rule 31 (statement -> f_call .)
    KEYWORD_PRINT   reduce using rule 31 (statement -> f_call .)
    RBRACE          reduce using rule 31 (statement -> f_call .)
    RBRACKET        reduce using rule 31 (statement -> f_call .)


state 37

    (32) statement -> print .

    ID              reduce using rule 32 (statement -> print .)
    KEYWORD_IF      reduce using rule 32 (statement -> print .)
    KEYWORD_DO      reduce using rule 32 (statement -> print .)
    KEYWORD_PRINT   reduce using rule 32 (statement -> print .)
    RBRACE          reduce using rule 32 (statement -> print .)
    RBRACKET        reduce using rule 32 (statement -> print .)


state 38

    (40) condition -> KEYWORD_IF . LPAREN expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON

    LPAREN          shift and go to state 51


state 39

    (39) cycle -> KEYWORD_DO . LBRACE body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON

    LBRACE          shift and go to state 52


state 40

    (34) print -> KEYWORD_PRINT . LPAREN print_items RPAREN SEMICOLON

    LPAREN          shift and go to state 53


state 41

    (15) FUNCS -> KEYWORD_VOID ID func_start LPAREN . parametros_opt RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON
    (18) parametros_opt -> . parametros
    (19) parametros_opt -> . empty
    (20) parametros -> . ID COLON type COMMA parametros
    (21) parametros -> . ID COLON type
    (71) empty -> .

    ID              shift and go to state 54
    RPAREN          reduce using rule 71 (empty -> .)

    parametros_opt                 shift and go to state 55
    parametros                     shift and go to state 56
    empty                          shift and go to state 57

state 42

    (6) var_list -> ID id_list COLON type .

    SEMICOLON       reduce using rule 6 (var_list -> ID id_list COLON type .)


state 43

    (9) type -> KEYWORD_INT .

    SEMICOLON       reduce using rule 9 (type -> KEYWORD_INT .)
    COMMA           reduce using rule 9 (type -> KEYWORD_INT .)
    RPAREN          reduce using rule 9 (type -> KEYWORD_INT .)


state 44

    (10) type -> KEYWORD_FLOAT .

    SEMICOLON       reduce using rule 10 (type -> KEYWORD_FLOAT .)
    COMMA           reduce using rule 10 (type -> KEYWORD_FLOAT .)
    RPAREN          reduce using rule 10 (type -> KEYWORD_FLOAT .)


state 45

    (11) type -> KEYWORD_STRING .

    SEMICOLON       reduce using rule 11 (type -> KEYWORD_STRING .)
    COMMA           reduce using rule 11 (type -> KEYWORD_STRING .)
    RPAREN          reduce using rule 11 (type -> KEYWORD_STRING .)


state 46

    (7) id_list -> COMMA ID id_list .

    COLON           reduce using rule 7 (id_list -> COMMA ID id_list .)


state 47

    (33) assign -> ID ASSIGN_SIGN . expresion SEMICOLON
    (50) expresion -> . exp comparador exp
    (51) expresion -> . exp
    (58) exp -> . exp OP_SUM termino
    (59) exp -> . exp OP_SUB termino
    (60) exp -> . termino
    (61) termino -> . termino OP_MUL factor
    (62) termino -> . termino OP_DIV factor
    (63) termino -> . factor
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . OP_SUM varcte
    (66) factor -> . OP_SUB varcte
    (67) factor -> . varcte
    (68) varcte -> . ID
    (69) varcte -> . CTE_INT
    (70) varcte -> . CTE_FLOAT

    LPAREN          shift and go to state 65
    OP_SUM          shift and go to state 61
    OP_SUB          shift and go to state 63
    ID              shift and go to state 58
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expresion                      shift and go to state 59
    exp                            shift and go to state 60
    termino                        shift and go to state 62
    factor                         shift and go to state 64
    varcte                         shift and go to state 66

state 48

    (45) f_call -> ID LPAREN . expresion_list_opt RPAREN SEMICOLON
    (46) expresion_list_opt -> . expresion_list
    (47) expresion_list_opt -> . empty
    (48) expresion_list -> . expresion_list COMMA expresion
    (49) expresion_list -> . expresion
    (71) empty -> .
    (50) expresion -> . exp comparador exp
    (51) expresion -> . exp
    (58) exp -> . exp OP_SUM termino
    (59) exp -> . exp OP_SUB termino
    (60) exp -> . termino
    (61) termino -> . termino OP_MUL factor
    (62) termino -> . termino OP_DIV factor
    (63) termino -> . factor
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . OP_SUM varcte
    (66) factor -> . OP_SUB varcte
    (67) factor -> . varcte
    (68) varcte -> . ID
    (69) varcte -> . CTE_INT
    (70) varcte -> . CTE_FLOAT

    RPAREN          reduce using rule 71 (empty -> .)
    LPAREN          shift and go to state 65
    OP_SUM          shift and go to state 61
    OP_SUB          shift and go to state 63
    ID              shift and go to state 58
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expresion_list_opt             shift and go to state 69
    expresion_list                 shift and go to state 70
    empty                          shift and go to state 71
    expresion                      shift and go to state 72
    exp                            shift and go to state 60
    termino                        shift and go to state 62
    factor                         shift and go to state 64
    varcte                         shift and go to state 66

state 49

    (1) Programa -> KEYWORD_PROGRAM ID SEMICOLON vars_opt funcs_opt KEYWORD_MAIN LBRACE body RBRACE . KEYWORD_END SEMICOLON

    KEYWORD_END     shift and go to state 73


state 50

    (25) statement_list -> statement statement_list .

    RBRACE          reduce using rule 25 (statement_list -> statement statement_list .)
    RBRACKET        reduce using rule 25 (statement_list -> statement statement_list .)


state 51

    (40) condition -> KEYWORD_IF LPAREN . expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON
    (50) expresion -> . exp comparador exp
    (51) expresion -> . exp
    (58) exp -> . exp OP_SUM termino
    (59) exp -> . exp OP_SUB termino
    (60) exp -> . termino
    (61) termino -> . termino OP_MUL factor
    (62) termino -> . termino OP_DIV factor
    (63) termino -> . factor
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . OP_SUM varcte
    (66) factor -> . OP_SUB varcte
    (67) factor -> . varcte
    (68) varcte -> . ID
    (69) varcte -> . CTE_INT
    (70) varcte -> . CTE_FLOAT

    LPAREN          shift and go to state 65
    OP_SUM          shift and go to state 61
    OP_SUB          shift and go to state 63
    ID              shift and go to state 58
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expresion                      shift and go to state 74
    exp                            shift and go to state 60
    termino                        shift and go to state 62
    factor                         shift and go to state 64
    varcte                         shift and go to state 66

state 52

    (39) cycle -> KEYWORD_DO LBRACE . body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON
    (24) body -> . statement_list
    (25) statement_list -> . statement statement_list
    (26) statement_list -> . statement
    (27) statement_list -> . empty
    (28) statement -> . assign
    (29) statement -> . condition
    (30) statement -> . cycle
    (31) statement -> . f_call
    (32) statement -> . print
    (71) empty -> .
    (33) assign -> . ID ASSIGN_SIGN expresion SEMICOLON
    (40) condition -> . KEYWORD_IF LPAREN expresion RPAREN cuadr_if LBRACE body RBRACE else_arg SEMICOLON
    (39) cycle -> . KEYWORD_DO LBRACE body RBRACE KEYWORD_WHILE LPAREN expresion RPAREN SEMICOLON
    (45) f_call -> . ID LPAREN expresion_list_opt RPAREN SEMICOLON
    (34) print -> . KEYWORD_PRINT LPAREN print_items RPAREN SEMICOLON

    RBRACE          reduce using rule 71 (empty -> .)
    ID              shift and go to state 28
    KEYWORD_IF      shift and go to state 38
    KEYWORD_DO      shift and go to state 39
    KEYWORD_PRINT   shift and go to state 40

    body                           shift and go to state 75
    statement_list                 shift and go to state 30
    statement                      shift and go to state 31
    empty                          shift and go to state 32
    assign                         shift and go to state 33
    condition                      shift and go to state 34
    cycle                          shift and go to state 35
    f_call                         shift and go to state 36
    print                          shift and go to state 37

state 53

    (34) print -> KEYWORD_PRINT LPAREN . print_items RPAREN SEMICOLON
    (35) print_items -> . print_items COMMA print_item
    (36) print_items -> . print_item
    (37) print_item -> . expresion
    (38) print_item -> . CTE_STRING
    (50) expresion -> . exp comparador exp
    (51) expresion -> . exp
    (58) exp -> . exp OP_SUM termino
    (59) exp -> . exp OP_SUB termino
    (60) exp -> . termino
    (61) termino -> . termino OP_MUL factor
    (62) termino -> . termino OP_DIV factor
    (63) termino -> . factor
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . OP_SUM varcte
    (66) factor -> . OP_SUB varcte
    (67) factor -> . varcte
    (68) varcte -> . ID
    (69) varcte -> . CTE_INT
    (70) varcte -> . CTE_FLOAT

    CTE_STRING      shift and go to state 79
    LPAREN          shift and go to state 65
    OP_SUM          shift and go to state 61
    OP_SUB          shift and go to state 63
    ID              shift and go to state 58
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    print_items                    shift and go to state 76
    print_item                     shift and go to state 77
    expresion                      shift and go to state 78
    exp                            shift and go to state 60
    termino                        shift and go to state 62
    factor                         shift and go to state 64
    varcte                         shift and go to state 66

state 54

    (20) parametros -> ID . COLON type COMMA parametros
    (21) parametros -> ID . COLON type

    COLON           shift and go to state 80


state 55

    (15) FUNCS -> KEYWORD_VOID ID func_start LPAREN parametros_opt . RPAREN LBRACKET vars_opt body RBRACKET func_end SEMICOLON

    RPAREN          shift and go to state 81


state 56

    (18) parametros_opt -> parametros .

    RPAREN          reduce using rule 18 (parametros_opt -> parametros .)


state 57

    (19) parametros_opt -> empty .

    RPAREN          reduce using rule 19 (parametros_opt -> empty .)


state 58

    (68) varcte -> ID .

    OP_MUL          reduce using rule 68 (varcte -> ID .)
    OP_DIV          reduce using rule 68 (varcte -> ID .)
    OP_SUM          reduce using rule 68 (varcte -> ID .)
    OP_SUB          reduce using rule 68 (varcte -> ID .)
    LESS            reduce using rule 68 (varcte -> ID .)
    GREATER         reduce using rule 68 (varcte -> ID .)
    NOT_EQUAL       reduce using rule 68 (varcte -> ID .)
    EQUAL           reduce using rule 68 (varcte -> ID .)
    GREATER_EQUAL   reduce using rule 68 (varcte -> ID .)
    LESS_EQUAL      reduce using rule 68 (varcte -> ID .)
    SEMICOLON       reduce using rule 68 (varcte -> ID .)
    COMMA           reduce using rule 68 (varcte -> ID .)
    RPAREN          reduce using rule 68 (varcte -> ID .)


state 59

    (33) assign -> ID ASSIGN_SIGN expresion . SEMICOLON

    SEMICOLON       shift and go to state 82


state 60

    (50) expresion -> exp . comparador exp
    (51) expresion -> exp .
    (58) exp -> exp . OP_SUM termino
    (59) exp -> exp . OP_SUB termino
    (52) comparador -> . LESS
    (53) comparador -> . GREATER
    (54) comparador -> . NOT_EQUAL
    (55) comparador -> . EQUAL
    (56) comparador -> . GREATER_EQUAL
    (57) comparador -> . LESS_EQUAL

    SEMICOLON       reduce using rule 51 (expresion -> exp .)
    COMMA           reduce using rule 51 (expresion -> exp .)
    RPAREN          reduce using rule 51 (expresion -> exp .)
    OP_SUM          shift and go to state 84
    OP_SUB          shift and go to state 85
    LESS            shift and go to state 86
    GREATER         shift and go to state 87
    NOT_EQUAL       shift and go to state 88
    EQUAL           shift and go to state 89
    GREATER_EQUAL   shift and go to state 90
    LESS_EQUAL      shift and go to state 91

    comparador                     shift and go to state 83

state 61

    (65) factor -> OP_SUM . varcte
    (68) varcte -> . ID
    (69) varcte -> . CTE_INT
    (70) varcte -> . CTE_FLOAT

    ID              shift and go to state 58
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68
